Added an image folder and messed around with more css properties

--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
 </head>
 <body>
     <h1>Evolution just doesn't work for me</h1>
+
+<!--This is the place for a horizontal scrollbar that will will be fixed at the top of the screen-->
+<nav>
+<ol id="nav">
+<li><a class="navbar" href="">home</a></li>
+<li><a class="navbar" href="">blog</a></li>
+<li><a class="navbar" href="podcast"></a></li>
+</ol>
+</nav>
+<br>
+<div id=tea>
+<img src="images/tea.jpg" alt="Bitch I'm sippin tea in yo hood!">
+</div>
+
+
+
+
 </body>
 </html>
