committing before a pull

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <ol id="nav">
 <li><a class="navbar" href="">home</a></li>
 <li><a class="navbar" href="">blog</a></li>
-<li><a class="navbar" href="podcast"></a></li>
+<li><a class="navbar" href="podcast">podcast</a></li>
 </ol>
 </nav>
 <br>
