--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Evolution just doesn't work for me</h1>
 
-<!--This is the place for a horizontal scrollbar that will will be fixed at the top of the screen-->
+<!--This is the place for a horizontal scrollbar that will will be fixed at the top of the screen. make pages for these links-->
 <nav>
 <ol id="nav">
 <li><a class="navbar" href="">home</a></li>
@@ -19,6 +19,7 @@
 </ol>
 </nav>
 <br>
+<!--The following image needs to be recoded for accessibility-->
 <div id=tea>
 <img src="images/tea.jpg" alt="Bitch I'm sippin tea in yo hood!">
 </div>
